#397: fix deprecations