@@ -41,7 +41,7 @@ public class TestAdvanced extends TestDatabase {
 
         assertEquals(1, list.size());
         Person p = list.get(0);
-        assertEquals(new Long(2), p.getId());
+        assertEquals(Long.valueOf(2), p.getId());
         assertEquals(null, p.getName());
         assertEquals(null, p.getSsn());
 
@@ -58,7 +58,7 @@ public class TestAdvanced extends TestDatabase {
 
         assertEquals(1, list.size());
         p = list.get(0);
-        assertEquals(new Long(2), p.getId());
+        assertEquals(Long.valueOf(2), p.getId());
         assertEquals("Pierce", p.getName().getFirst());
         assertEquals("BROSNAN", p.getName().getLast());
 
@@ -71,7 +71,7 @@ public class TestAdvanced extends TestDatabase {
 
         assertEquals(1, list.size());
         p = list.get(0);
-        assertEquals(new Long(2), p.getId());
+        assertEquals(Long.valueOf(2), p.getId());
         assertEquals(null, p.getName());
         assertEquals(null, p.getSsn());
     }
@@ -91,7 +91,7 @@ public class TestAdvanced extends TestDatabase {
 
         assertEquals(3, list.size());
         MediaTransport gt = list.get(0);
-        assertEquals(new Long(1), gt.getId());
+        assertEquals(Long.valueOf(1), gt.getId());
         assertEquals("Pippi Långstrump i Söderhavet", gt.getMediaTitle());
         if (gt.getEngagement() != null) {
             assertEquals("", gt.getEngagement().getFirst());
@@ -114,7 +114,7 @@ public class TestAdvanced extends TestDatabase {
 
         assertEquals(1, list.size());
         gt = list.get(0);
-        assertEquals(new Long(2), gt.getId());
+        assertEquals(Long.valueOf(2), gt.getId());
         assertEquals("Die Another Day", gt.getMediaTitle());
         assertEquals("Pierce", gt.getEngagement().getFirst());
         assertEquals("Brosnan", gt.getEngagement().getLast());
@@ -136,7 +136,7 @@ public class TestAdvanced extends TestDatabase {
 
         assertEquals(1, list.size());
         LibraryTransport gt = list.get(0);
-        assertEquals(new Long(1), gt.getId());
+        assertEquals(Long.valueOf(1), gt.getId());
         assertEquals("LibraryServiceTest", gt.getName());
         assertEquals("abc123", gt.getLocation());
 
@@ -152,7 +152,7 @@ public class TestAdvanced extends TestDatabase {
 
         assertEquals(1, list.size());
         gt = list.get(0);
-        assertEquals(new Long(1), gt.getId());
+        assertEquals(Long.valueOf(1), gt.getId());
         assertEquals("LibraryServiceTest", gt.getName());
         assertEquals("abc456", gt.getLocation());
         assertEquals("Die Another Day", gt.getMedia().getMediaTitle());
@@ -171,7 +171,7 @@ public class TestAdvanced extends TestDatabase {
 
         assertEquals(1, list.size());
         gt = list.get(0);
-        assertEquals(new Long(1), gt.getId());
+        assertEquals(Long.valueOf(1), gt.getId());
         assertEquals("LibraryServiceTest", gt.getName());
         assertEquals("abc456", gt.getLocation());
         assertEquals("Die Another Day", gt.getMedia().getMediaTitle());
@@ -191,7 +191,7 @@ public class TestAdvanced extends TestDatabase {
 
         assertEquals(1, list.size());
         gt = list.get(0);
-        assertEquals(new Long(1), gt.getId());
+        assertEquals(Long.valueOf(1), gt.getId());
         assertEquals("LibraryServiceTest", gt.getName());
         assertEquals("abc123", gt.getLocation());
         if (gt.getMedia() != null) {
@@ -218,7 +218,7 @@ public class TestAdvanced extends TestDatabase {
 
         assertEquals(3, list.size());
         MediaTransport gt = list.get(0);
-        assertEquals(new Long(1), gt.getId());
+        assertEquals(Long.valueOf(1), gt.getId());
         assertEquals("Pippi Långstrump i Söderhavet", gt.getMediaTitle());
         if (gt.getEngagement() != null) {
             assertEquals("", gt.getEngagement().getFirst());
@@ -242,7 +242,7 @@ public class TestAdvanced extends TestDatabase {
 
         assertEquals(1, list.size());
         gt = list.get(0);
-        assertEquals(new Long(2), gt.getId());
+        assertEquals(Long.valueOf(2), gt.getId());
         assertEquals("Die Another Day", gt.getMediaTitle());
         assertEquals("Pierce", gt.getEngagement().getFirst());
         assertEquals("Brosnan", gt.getEngagement().getLast());
@@ -265,7 +265,7 @@ public class TestAdvanced extends TestDatabase {
 
         assertEquals(3, list.size());
         MediaTransport gt = list.get(0);
-        assertEquals(new Long(1), gt.getId());
+        assertEquals(Long.valueOf(1), gt.getId());
         assertEquals("Pippi Långstrump i Söderhavet", gt.getMediaTitle());
         if (gt.getEngagement() != null) {
             assertEquals("", gt.getEngagement().getFirst());
@@ -287,7 +287,7 @@ public class TestAdvanced extends TestDatabase {
 
         assertEquals(1, list.size());
         gt = list.get(0);
-        assertEquals(new Long(2), gt.getId());
+        assertEquals(Long.valueOf(2), gt.getId());
         assertEquals("Die Another Day", gt.getMediaTitle());
         assertEquals("Pierce", gt.getEngagement().getFirst());
         assertEquals("Brosnan", gt.getEngagement().getLast());
@@ -307,7 +307,7 @@ public class TestAdvanced extends TestDatabase {
 
         assertEquals(1, list.size());
         gt = list.get(0);
-        assertEquals(new Long(2), gt.getId());
+        assertEquals(Long.valueOf(2), gt.getId());
         assertEquals("Die Another Day", gt.getMediaTitle());
         assertEquals("Pierce", gt.getEngagement().getFirst());
         assertEquals("Brosnan", gt.getEngagement().getLast());
@@ -328,7 +328,7 @@ public class TestAdvanced extends TestDatabase {
 
         assertEquals(1, list.size());
         gt = list.get(0);
-        assertEquals(new Long(2), gt.getId());
+        assertEquals(Long.valueOf(2), gt.getId());
         assertEquals("Die Another Day", gt.getMediaTitle());
         assertEquals("Pierce", gt.getEngagement().getFirst());
         assertEquals("Brosnan", gt.getEngagement().getLast());
@@ -352,7 +352,7 @@ public class TestAdvanced extends TestDatabase {
 
         assertEquals(3, list.size());
         MediaTransport gt = list.get(0);
-        assertEquals(new Long(1), gt.getId());
+        assertEquals(Long.valueOf(1), gt.getId());
         assertEquals("Pippi Långstrump i Söderhavet", gt.getMediaTitle());
         if (gt.getEngagement() != null) {
             assertEquals("", gt.getEngagement().getFirst());
@@ -376,7 +376,7 @@ public class TestAdvanced extends TestDatabase {
 
         assertEquals(1, list.size());
         gt = list.get(0);
-        assertEquals(new Long(2), gt.getId());
+        assertEquals(Long.valueOf(2), gt.getId());
         assertEquals("Die Another Day", gt.getMediaTitle());
         assertEquals("Pierce", gt.getEngagement().getFirst());
         assertEquals("Brosnan", gt.getEngagement().getLast());
@@ -397,7 +397,7 @@ public class TestAdvanced extends TestDatabase {
 
         assertEquals(1, list.size());
         gt = list.get(0);
-        assertEquals(new Long(2), gt.getId());
+        assertEquals(Long.valueOf(2), gt.getId());
         assertEquals("Die Another Day", gt.getMediaTitle());
         assertEquals("Pierce", gt.getEngagement().getFirst());
         assertEquals("Brosnan", gt.getEngagement().getLast());
@@ -422,7 +422,7 @@ public class TestAdvanced extends TestDatabase {
 
         assertEquals(1, list.size());
         gt = list.get(0);
-        assertEquals(new Long(2), gt.getId());
+        assertEquals(Long.valueOf(2), gt.getId());
         assertEquals("Die Another Day", gt.getMediaTitle());
         assertEquals("Pierce", gt.getEngagement().getFirst());
         assertEquals("Brosnan", gt.getEngagement().getLast());
