@@ -35,13 +35,13 @@ public class TestBasic extends TestDatabase {
 
         assertEquals(2, list.size());
         Person p = list.get(0);
-        assertEquals(new Long(2), p.getId());
+        assertEquals(Long.valueOf(2), p.getId());
         assertEquals("1953-05-16", p.getBirthDate().toString());
         assertEquals(null, p.getCreatedDate());
         assertEquals(null, p.getCreatedBy());
         assertEquals("2006-12-08", p.getLastUpdated().toString());
         assertEquals("dbunit", p.getLastUpdatedBy());
-        assertEquals(new Long(1), p.getVersion());
+        assertEquals(Long.valueOf(1), p.getVersion());
         assertEquals(Gender.MALE, p.getSex());
         assertNotNull(p.getSsn());
         assertEquals("123456", p.getSsn().getNumber());
@@ -72,7 +72,7 @@ public class TestBasic extends TestDatabase {
 
         assertEquals(2, list.size());
         Person p = list.get(0);
-        assertEquals(new Long(2), p.getId());
+        assertEquals(Long.valueOf(2), p.getId());
         assertEquals("pierce", p.getName().getFirst());
         assertEquals("BROSNAN", p.getName().getLast());
     }
@@ -92,13 +92,13 @@ public class TestBasic extends TestDatabase {
 
         assertEquals(2, list.size());
         Person p = list.get(0);
-        assertEquals(new Long(2), p.getId());
+        assertEquals(Long.valueOf(2), p.getId());
         assertEquals("1953-05-16", p.getBirthDate().toString());
         assertEquals(null, p.getCreatedDate());
         assertEquals(null, p.getCreatedBy());
         assertEquals("2006-12-08", p.getLastUpdated().toString());
         assertEquals("dbunit", p.getLastUpdatedBy());
-        assertEquals(new Long(1), p.getVersion());
+        assertEquals(Long.valueOf(1), p.getVersion());
         assertEquals(Gender.MALE, p.getSex());
         assertNotNull(p.getSsn());
         assertEquals("123456", p.getSsn().getNumber());
@@ -150,13 +150,13 @@ public class TestBasic extends TestDatabase {
 
         assertEquals(1, list.size());
         Person p = list.get(0);
-        assertEquals(new Long(2), p.getId());
+        assertEquals(Long.valueOf(2), p.getId());
         assertEquals("1953-05-16", p.getBirthDate().toString());
         assertEquals(null, p.getCreatedDate());
         assertEquals(null, p.getCreatedBy());
         assertEquals("2006-12-08 00:00:00", sdf.format(p.getLastUpdated()));
         assertEquals("dbunit", p.getLastUpdatedBy());
-        assertEquals(new Long(1), p.getVersion());
+        assertEquals(Long.valueOf(1), p.getVersion());
         assertEquals(Gender.MALE, p.getSex());
         assertNotNull(p.getSsn());
         assertEquals("123456", p.getSsn().getNumber());
@@ -208,13 +208,13 @@ public class TestBasic extends TestDatabase {
 
         assertEquals(1, list.size());
         Person p = list.get(0);
-        assertEquals(new Long(2), p.getId());
+        assertEquals(Long.valueOf(2), p.getId());
         assertEquals("1953-05-16", p.getBirthDate().toString());
         assertEquals(null, p.getCreatedDate());
         assertEquals(null, p.getCreatedBy());
         assertEquals("2006-12-08 00:00:00", sdf.format(p.getLastUpdated()));
         assertEquals("dbunit", p.getLastUpdatedBy());
-        assertEquals(new Long(1), p.getVersion());
+        assertEquals(Long.valueOf(1), p.getVersion());
         assertEquals(Gender.MALE, p.getSex());
         assertNotNull(p.getSsn());
         assertEquals("123456", p.getSsn().getNumber());
@@ -280,13 +280,13 @@ public class TestBasic extends TestDatabase {
 
         assertEquals(2, list.size());
         Person p = list.get(0);
-        assertEquals(new Long(2), p.getId());
+        assertEquals(Long.valueOf(2), p.getId());
         assertEquals("1953-05-16", p.getBirthDate().toString());
         assertEquals(null, p.getCreatedDate());
         assertEquals(null, p.getCreatedBy());
         assertEquals("2006-12-08 00:00:00", sdf.format(p.getLastUpdated()));
         assertEquals("dbunit", p.getLastUpdatedBy());
-        assertEquals(new Long(1), p.getVersion());
+        assertEquals(Long.valueOf(1), p.getVersion());
         assertEquals(Gender.MALE, p.getSex());
         assertNotNull(p.getSsn());
         assertEquals("123456", p.getSsn().getNumber());
@@ -338,13 +338,13 @@ public class TestBasic extends TestDatabase {
 
         assertEquals(1, list.size());
         Person p = list.get(0);
-        assertEquals(new Long(2), p.getId());
+        assertEquals(Long.valueOf(2), p.getId());
         assertEquals("1953-05-16", p.getBirthDate().toString());
         assertEquals(null, p.getCreatedDate());
         assertEquals(null, p.getCreatedBy());
         assertEquals("2006-12-08 00:00:00", sdf.format(p.getLastUpdated()));
         assertEquals("dbunit", p.getLastUpdatedBy());
-        assertEquals(new Long(1), p.getVersion());
+        assertEquals(Long.valueOf(1), p.getVersion());
         assertEquals(Gender.MALE, p.getSex());
         assertNotNull(p.getSsn());
         assertEquals("123456", p.getSsn().getNumber());
@@ -396,13 +396,13 @@ public class TestBasic extends TestDatabase {
 
         assertEquals(2, list.size());
         Person p = list.get(0);
-        assertEquals(new Long(2), p.getId());
+        assertEquals(Long.valueOf(2), p.getId());
         assertEquals("1953-05-16", p.getBirthDate().toString());
         assertEquals(null, p.getCreatedDate());
         assertEquals(null, p.getCreatedBy());
         assertEquals("2006-12-08 00:00:00", sdf.format(p.getLastUpdated()));
         assertEquals("dbunit", p.getLastUpdatedBy());
-        assertEquals(new Long(1), p.getVersion());
+        assertEquals(Long.valueOf(1), p.getVersion());
         assertEquals(Gender.MALE, p.getSex());
         assertNotNull(p.getSsn());
         assertEquals("123456", p.getSsn().getNumber());
@@ -430,7 +430,7 @@ public class TestBasic extends TestDatabase {
 
         assertEquals(1, list.size());
         Person p = list.get(0);
-        assertEquals(new Long(2), p.getId());
+        assertEquals(Long.valueOf(2), p.getId());
     }
 
     @Test
@@ -455,7 +455,7 @@ public class TestBasic extends TestDatabase {
 
         assertEquals(2, list.size());
         Person p = list.get(0);
-        assertEquals(new Long(2), p.getId());
+        assertEquals(Long.valueOf(2), p.getId());
         assertEquals("Pierce", p.getName().getFirst());
         assertEquals("Brosnan", p.getName().getLast());
     }
@@ -483,7 +483,7 @@ public class TestBasic extends TestDatabase {
 
         assertEquals(2, list.size());
         Person p = list.get(0);
-        assertEquals(new Long(2), p.getId());
+        assertEquals(Long.valueOf(2), p.getId());
         assertEquals("Pierce", p.getName().getFirst());
         assertEquals("BROSNAN", p.getName().getLast());
 
@@ -498,7 +498,7 @@ public class TestBasic extends TestDatabase {
 
         assertEquals(2, list.size());
         p = list.get(0);
-        assertEquals(new Long(2), p.getId());
+        assertEquals(Long.valueOf(2), p.getId());
         if (p.getName() != null) {
             assertEquals("", p.getName().getFirst());
             assertEquals("", p.getName().getLast());
@@ -522,13 +522,13 @@ public class TestBasic extends TestDatabase {
 
         assertEquals(2, list.size());
         Person p = list.get(0);
-        assertEquals(new Long(2), p.getId());
+        assertEquals(Long.valueOf(2), p.getId());
         assertEquals("1953-05-16", p.getBirthDate().toString());
         assertEquals(null, p.getCreatedDate());
         assertEquals(null, p.getCreatedBy());
         assertEquals("2006-12-08", p.getLastUpdated().toString());
         assertEquals("dbunit", p.getLastUpdatedBy());
-        assertEquals(new Long(1), p.getVersion());
+        assertEquals(Long.valueOf(1), p.getVersion());
         assertEquals(Gender.MALE, p.getSex());
         assertNotNull(p.getSsn());
         assertEquals("123456", p.getSsn().getNumber());
