@@ -62,13 +62,13 @@ public class TestOperators extends TestDatabase {
 
         assertEquals(1, list.size());
         Person p = list.get(0);
-        assertEquals(new Long(2), p.getId());
+        assertEquals(Long.valueOf(2), p.getId());
         assertEquals("1953-05-16", p.getBirthDate().toString());
         assertEquals(null, p.getCreatedDate());
         assertEquals(null, p.getCreatedBy());
         assertEquals("2006-12-08 00:00:00", sdf.format(p.getLastUpdated()));
         assertEquals("dbunit", p.getLastUpdatedBy());
-        assertEquals(new Long(1), p.getVersion());
+        assertEquals(Long.valueOf(1), p.getVersion());
         assertEquals(Gender.MALE, p.getSex());
         assertNotNull(p.getSsn());
         assertEquals("123456", p.getSsn().getNumber());
@@ -127,13 +127,13 @@ public class TestOperators extends TestDatabase {
 
         assertEquals(1, list.size());
         Person p = list.get(0);
-        assertEquals(new Long(2), p.getId());
+        assertEquals(Long.valueOf(2), p.getId());
         assertEquals("1953-05-16", p.getBirthDate().toString());
         assertEquals(null, p.getCreatedDate());
         assertEquals(null, p.getCreatedBy());
         assertEquals("2006-12-08 00:00:00", sdf.format(p.getLastUpdated()));
         assertEquals("dbunit", p.getLastUpdatedBy());
-        assertEquals(new Long(1), p.getVersion());
+        assertEquals(Long.valueOf(1), p.getVersion());
         assertEquals(Gender.MALE, p.getSex());
         assertNotNull(p.getSsn());
         assertEquals("123456", p.getSsn().getNumber());
@@ -191,13 +191,13 @@ public class TestOperators extends TestDatabase {
 
         assertEquals(1, list.size());
         Person p = list.get(0);
-        assertEquals(new Long(2), p.getId());
+        assertEquals(Long.valueOf(2), p.getId());
         assertEquals("1953-05-16", p.getBirthDate().toString());
         assertEquals(null, p.getCreatedDate());
         assertEquals(null, p.getCreatedBy());
         assertEquals("2006-12-08 00:00:00", sdf.format(p.getLastUpdated()));
         assertEquals("dbunit", p.getLastUpdatedBy());
-        assertEquals(new Long(1), p.getVersion());
+        assertEquals(Long.valueOf(1), p.getVersion());
         assertEquals(Gender.MALE, p.getSex());
         assertNotNull(p.getSsn());
         assertEquals("123456", p.getSsn().getNumber());
@@ -258,13 +258,13 @@ public class TestOperators extends TestDatabase {
 
         assertEquals(1, list.size());
         Person p = list.get(0);
-        assertEquals(new Long(2), p.getId());
+        assertEquals(Long.valueOf(2), p.getId());
         assertEquals("1953-05-16", p.getBirthDate().toString());
         assertEquals(null, p.getCreatedDate());
         assertEquals(null, p.getCreatedBy());
         assertEquals("2006-12-08 00:00:00", sdf.format(p.getLastUpdated()));
         assertEquals("dbunit", p.getLastUpdatedBy());
-        assertEquals(new Long(1), p.getVersion());
+        assertEquals(Long.valueOf(1), p.getVersion());
         assertEquals(Gender.MALE, p.getSex());
         assertNotNull(p.getSsn());
         assertEquals("123456", p.getSsn().getNumber());
@@ -324,13 +324,13 @@ public class TestOperators extends TestDatabase {
 
         assertEquals(1, list.size());
         Person p = list.get(0);
-        assertEquals(new Long(2), p.getId());
+        assertEquals(Long.valueOf(2), p.getId());
         assertEquals("1953-05-16", p.getBirthDate().toString());
         assertEquals(null, p.getCreatedDate());
         assertEquals(null, p.getCreatedBy());
         assertEquals("2006-12-08 00:00:00", sdf.format(p.getLastUpdated()));
         assertEquals("dbunit", p.getLastUpdatedBy());
-        assertEquals(new Long(1), p.getVersion());
+        assertEquals(Long.valueOf(1), p.getVersion());
         assertEquals(Gender.MALE, p.getSex());
         assertNotNull(p.getSsn());
         assertEquals("123456", p.getSsn().getNumber());
@@ -391,13 +391,13 @@ public class TestOperators extends TestDatabase {
 
         assertEquals(1, list.size());
         Person p = list.get(0);
-        assertEquals(new Long(2), p.getId());
+        assertEquals(Long.valueOf(2), p.getId());
         assertEquals("1953-05-16", p.getBirthDate().toString());
         assertEquals(null, p.getCreatedDate());
         assertEquals(null, p.getCreatedBy());
         assertEquals("2006-12-08 00:00:00", sdf.format(p.getLastUpdated()));
         assertEquals("dbunit", p.getLastUpdatedBy());
-        assertEquals(new Long(1), p.getVersion());
+        assertEquals(Long.valueOf(1), p.getVersion());
         assertEquals(Gender.MALE, p.getSex());
         assertNotNull(p.getSsn());
         assertEquals("123456", p.getSsn().getNumber());
@@ -457,13 +457,13 @@ public class TestOperators extends TestDatabase {
 
         assertEquals(1, list.size());
         Person p = list.get(0);
-        assertEquals(new Long(2), p.getId());
+        assertEquals(Long.valueOf(2), p.getId());
         assertEquals("1953-05-16", p.getBirthDate().toString());
         assertEquals(null, p.getCreatedDate());
         assertEquals(null, p.getCreatedBy());
         assertEquals("2006-12-08 00:00:00", sdf.format(p.getLastUpdated()));
         assertEquals("dbunit", p.getLastUpdatedBy());
-        assertEquals(new Long(1), p.getVersion());
+        assertEquals(Long.valueOf(1), p.getVersion());
         assertEquals(Gender.MALE, p.getSex());
         assertNotNull(p.getSsn());
         assertEquals("123456", p.getSsn().getNumber());
