@@ -55,7 +55,7 @@ public class TestAdvancedQuery extends TestDatabase {
 
         assertEquals(1, list.size());
         Person p = list.get(0);
-        assertEquals(new Long(2), p.getId());
+        assertEquals(Long.valueOf(2), p.getId());
         assertEquals(null, p.getName());
         assertEquals(null, p.getSsn());
 
@@ -73,7 +73,7 @@ public class TestAdvancedQuery extends TestDatabase {
 
         assertEquals(1, list.size());
         p = list.get(0);
-        assertEquals(new Long(2), p.getId());
+        assertEquals(Long.valueOf(2), p.getId());
         assertEquals("Pierce", p.getName().getFirst());
         assertEquals("BROSNAN", p.getName().getLast());
 
@@ -87,7 +87,7 @@ public class TestAdvancedQuery extends TestDatabase {
 
         assertEquals(1, list.size());
         p = list.get(0);
-        assertEquals(new Long(2), p.getId());
+        assertEquals(Long.valueOf(2), p.getId());
         assertEquals(null, p.getName());
         assertEquals(null, p.getSsn());
     }
@@ -118,7 +118,7 @@ public class TestAdvancedQuery extends TestDatabase {
 
         assertEquals(3, list.size());
         MediaTransport gt = list.get(0);
-        assertEquals(new Long(1), gt.getId());
+        assertEquals(Long.valueOf(1), gt.getId());
         assertEquals("Pippi Långstrump i Söderhavet", gt.getMediaTitle());
         if (gt.getEngagement() != null) {
             assertEquals("", gt.getEngagement().getFirst());
@@ -142,7 +142,7 @@ public class TestAdvancedQuery extends TestDatabase {
 
         assertEquals(1, list.size());
         gt = list.get(0);
-        assertEquals(new Long(2), gt.getId());
+        assertEquals(Long.valueOf(2), gt.getId());
         assertEquals("Die Another Day", gt.getMediaTitle());
         assertEquals("Pierce", gt.getEngagement().getFirst());
         assertEquals("Brosnan", gt.getEngagement().getLast());
@@ -175,7 +175,7 @@ public class TestAdvancedQuery extends TestDatabase {
 
         assertEquals(1, list.size());
         LibraryTransport gt = list.get(0);
-        assertEquals(new Long(1), gt.getId());
+        assertEquals(Long.valueOf(1), gt.getId());
         assertEquals("LibraryServiceTest", gt.getName());
         assertEquals("abc123", gt.getLocation());
 
@@ -192,7 +192,7 @@ public class TestAdvancedQuery extends TestDatabase {
 
         assertEquals(1, list.size());
         gt = list.get(0);
-        assertEquals(new Long(1), gt.getId());
+        assertEquals(Long.valueOf(1), gt.getId());
         assertEquals("LibraryServiceTest", gt.getName());
         assertEquals("abc456", gt.getLocation());
         assertEquals("Die Another Day", gt.getMedia().getMediaTitle());
@@ -212,7 +212,7 @@ public class TestAdvancedQuery extends TestDatabase {
 
         assertEquals(1, list.size());
         gt = list.get(0);
-        assertEquals(new Long(1), gt.getId());
+        assertEquals(Long.valueOf(1), gt.getId());
         assertEquals("LibraryServiceTest", gt.getName());
         assertEquals("abc456", gt.getLocation());
         assertEquals("Die Another Day", gt.getMedia().getMediaTitle());
@@ -233,7 +233,7 @@ public class TestAdvancedQuery extends TestDatabase {
 
         assertEquals(1, list.size());
         gt = list.get(0);
-        assertEquals(new Long(1), gt.getId());
+        assertEquals(Long.valueOf(1), gt.getId());
         assertEquals("LibraryServiceTest", gt.getName());
         assertEquals("abc123", gt.getLocation());
         if (gt.getMedia() != null) {
@@ -271,7 +271,7 @@ public class TestAdvancedQuery extends TestDatabase {
 
         assertEquals(3, list.size());
         MediaTransport gt = list.get(0);
-        assertEquals(new Long(1), gt.getId());
+        assertEquals(Long.valueOf(1), gt.getId());
         assertEquals("Pippi Långstrump i Söderhavet", gt.getMediaTitle());
         if (gt.getEngagement() != null) {
             assertEquals("", gt.getEngagement().getFirst());
@@ -296,7 +296,7 @@ public class TestAdvancedQuery extends TestDatabase {
 
         assertEquals(1, list.size());
         gt = list.get(0);
-        assertEquals(new Long(2), gt.getId());
+        assertEquals(Long.valueOf(2), gt.getId());
         assertEquals("Die Another Day", gt.getMediaTitle());
         assertEquals("Pierce", gt.getEngagement().getFirst());
         assertEquals("Brosnan", gt.getEngagement().getLast());
@@ -330,7 +330,7 @@ public class TestAdvancedQuery extends TestDatabase {
 
         assertEquals(3, list.size());
         MediaTransport gt = list.get(0);
-        assertEquals(new Long(1), gt.getId());
+        assertEquals(Long.valueOf(1), gt.getId());
         assertEquals("Pippi Långstrump i Söderhavet", gt.getMediaTitle());
         if (gt.getEngagement() != null) {
             assertEquals("", gt.getEngagement().getFirst());
@@ -353,7 +353,7 @@ public class TestAdvancedQuery extends TestDatabase {
 
         assertEquals(1, list.size());
         gt = list.get(0);
-        assertEquals(new Long(2), gt.getId());
+        assertEquals(Long.valueOf(2), gt.getId());
         assertEquals("Die Another Day", gt.getMediaTitle());
         assertEquals("Pierce", gt.getEngagement().getFirst());
         assertEquals("Brosnan", gt.getEngagement().getLast());
@@ -374,7 +374,7 @@ public class TestAdvancedQuery extends TestDatabase {
 
         assertEquals(1, list.size());
         gt = list.get(0);
-        assertEquals(new Long(2), gt.getId());
+        assertEquals(Long.valueOf(2), gt.getId());
         assertEquals("Die Another Day", gt.getMediaTitle());
         assertEquals("Pierce", gt.getEngagement().getFirst());
         assertEquals("Brosnan", gt.getEngagement().getLast());
@@ -396,7 +396,7 @@ public class TestAdvancedQuery extends TestDatabase {
 
         assertEquals(1, list.size());
         gt = list.get(0);
-        assertEquals(new Long(2), gt.getId());
+        assertEquals(Long.valueOf(2), gt.getId());
         assertEquals("Die Another Day", gt.getMediaTitle());
         assertEquals("Pierce", gt.getEngagement().getFirst());
         assertEquals("Brosnan", gt.getEngagement().getLast());
@@ -431,7 +431,7 @@ public class TestAdvancedQuery extends TestDatabase {
 
         assertEquals(3, list.size());
         MediaTransport gt = list.get(0);
-        assertEquals(new Long(1), gt.getId());
+        assertEquals(Long.valueOf(1), gt.getId());
         assertEquals("Pippi Långstrump i Söderhavet", gt.getMediaTitle());
         if (gt.getEngagement() != null) {
             assertEquals("", gt.getEngagement().getFirst());
@@ -456,7 +456,7 @@ public class TestAdvancedQuery extends TestDatabase {
 
         assertEquals(1, list.size());
         gt = list.get(0);
-        assertEquals(new Long(2), gt.getId());
+        assertEquals(Long.valueOf(2), gt.getId());
         assertEquals("Die Another Day", gt.getMediaTitle());
         assertEquals("Pierce", gt.getEngagement().getFirst());
         assertEquals("Brosnan", gt.getEngagement().getLast());
@@ -478,7 +478,7 @@ public class TestAdvancedQuery extends TestDatabase {
 
         assertEquals(1, list.size());
         gt = list.get(0);
-        assertEquals(new Long(2), gt.getId());
+        assertEquals(Long.valueOf(2), gt.getId());
         assertEquals("Die Another Day", gt.getMediaTitle());
         assertEquals("Pierce", gt.getEngagement().getFirst());
         assertEquals("Brosnan", gt.getEngagement().getLast());
@@ -504,7 +504,7 @@ public class TestAdvancedQuery extends TestDatabase {
 
         assertEquals(1, list.size());
         gt = list.get(0);
-        assertEquals(new Long(2), gt.getId());
+        assertEquals(Long.valueOf(2), gt.getId());
         assertEquals("Die Another Day", gt.getMediaTitle());
         assertEquals("Pierce", gt.getEngagement().getFirst());
         assertEquals("Brosnan", gt.getEngagement().getLast());
