@@ -28,13 +28,13 @@ public class TestAsterisk extends TestDatabase {
 
         assertEquals(2, list.size());
         Person p = list.get(0);
-        assertEquals(new Long(2), p.getId());
+        assertEquals(Long.valueOf(2), p.getId());
         assertEquals("1953-05-16", p.getBirthDate().toString());
         assertEquals(null, p.getCreatedDate());
         assertEquals(null, p.getCreatedBy());
         assertEquals("2006-12-08", p.getLastUpdated().toString());
         assertEquals("dbunit", p.getLastUpdatedBy());
-        assertEquals(new Long(1), p.getVersion());
+        assertEquals(Long.valueOf(1), p.getVersion());
         assertEquals(Gender.MALE, p.getSex());
         assertNotNull(p.getSsn());
         assertEquals("123456", p.getSsn().getNumber());
