@@ -37,13 +37,13 @@ public class TestEmbeddedMapping extends TestDatabase {
 
         assertEquals(2, list.size());
         Person p = list.get(0);
-        assertEquals(new Long(2), p.getId());
+        assertEquals(Long.valueOf(2), p.getId());
         assertEquals("1953-05-16", p.getBirthDate().toString());
         assertEquals(null, p.getCreatedDate());
         assertEquals(null, p.getCreatedBy());
         assertEquals("2006-12-08", p.getLastUpdated().toString());
         assertEquals("dbunit", p.getLastUpdatedBy());
-        assertEquals(new Long(1), p.getVersion());
+        assertEquals(Long.valueOf(1), p.getVersion());
         assertEquals(Gender.MALE, p.getSex());
         assertNotNull(p.getSsn());
         assertEquals("123456", p.getSsn().getNumber());
@@ -70,13 +70,13 @@ public class TestEmbeddedMapping extends TestDatabase {
 
         assertEquals(2, list.size());
         Person p = list.get(0);
-        assertEquals(new Long(2), p.getId());
+        assertEquals(Long.valueOf(2), p.getId());
         assertEquals("1953-05-16", p.getBirthDate().toString());
         assertEquals(null, p.getCreatedDate());
         assertEquals(null, p.getCreatedBy());
         assertEquals("2006-12-08", p.getLastUpdated().toString());
         assertEquals("dbunit", p.getLastUpdatedBy());
-        assertEquals(new Long(1), p.getVersion());
+        assertEquals(Long.valueOf(1), p.getVersion());
         assertEquals(Gender.MALE, p.getSex());
         assertNotNull(p.getSsn());
         assertEquals("123456", p.getSsn().getNumber());
@@ -107,7 +107,7 @@ public class TestEmbeddedMapping extends TestDatabase {
 
         assertEquals(2, list.size());
         Person p = list.get(0);
-        assertEquals(new Long(2), p.getId());
+        assertEquals(Long.valueOf(2), p.getId());
         assertEquals("pierce", p.getName().getFirst());
         assertEquals("BROSNAN", p.getName().getLast());
     }
@@ -130,13 +130,13 @@ public class TestEmbeddedMapping extends TestDatabase {
 
         assertEquals(2, list.size());
         Person p = list.get(0);
-        assertEquals(new Long(2), p.getId());
+        assertEquals(Long.valueOf(2), p.getId());
         assertEquals("1953-05-16", p.getBirthDate().toString());
         assertEquals(null, p.getCreatedDate());
         assertEquals(null, p.getCreatedBy());
         assertEquals("2006-12-08", p.getLastUpdated().toString());
         assertEquals("dbunit", p.getLastUpdatedBy());
-        assertEquals(new Long(1), p.getVersion());
+        assertEquals(Long.valueOf(1), p.getVersion());
         assertEquals(Gender.MALE, p.getSex());
         assertNotNull(p.getSsn());
         assertEquals("123456", p.getSsn().getNumber());
@@ -188,13 +188,13 @@ public class TestEmbeddedMapping extends TestDatabase {
 
         assertEquals(1, list.size());
         Person p = list.get(0);
-        assertEquals(new Long(2), p.getId());
+        assertEquals(Long.valueOf(2), p.getId());
         assertEquals("1953-05-16", p.getBirthDate().toString());
         assertEquals(null, p.getCreatedDate());
         assertEquals(null, p.getCreatedBy());
         assertEquals("2006-12-08 00:00:00", sdf.format(p.getLastUpdated()));
         assertEquals("dbunit", p.getLastUpdatedBy());
-        assertEquals(new Long(1), p.getVersion());
+        assertEquals(Long.valueOf(1), p.getVersion());
         assertEquals(Gender.MALE, p.getSex());
         assertNotNull(p.getSsn());
         assertEquals("123456", p.getSsn().getNumber());
@@ -246,13 +246,13 @@ public class TestEmbeddedMapping extends TestDatabase {
 
         assertEquals(2, list.size());
         Person p = list.get(0);
-        assertEquals(new Long(2), p.getId());
+        assertEquals(Long.valueOf(2), p.getId());
         assertEquals("1953-05-16", p.getBirthDate().toString());
         assertEquals(null, p.getCreatedDate());
         assertEquals(null, p.getCreatedBy());
         assertEquals("2006-12-08 00:00:00", sdf.format(p.getLastUpdated()));
         assertEquals("dbunit", p.getLastUpdatedBy());
-        assertEquals(new Long(1), p.getVersion());
+        assertEquals(Long.valueOf(1), p.getVersion());
         assertEquals(Gender.MALE, p.getSex());
         assertNotNull(p.getSsn());
         assertEquals("123456", p.getSsn().getNumber());
@@ -304,13 +304,13 @@ public class TestEmbeddedMapping extends TestDatabase {
 
         assertEquals(1, list.size());
         Person p = list.get(0);
-        assertEquals(new Long(2), p.getId());
+        assertEquals(Long.valueOf(2), p.getId());
         assertEquals("1953-05-16", p.getBirthDate().toString());
         assertEquals(null, p.getCreatedDate());
         assertEquals(null, p.getCreatedBy());
         assertEquals("2006-12-08 00:00:00", sdf.format(p.getLastUpdated()));
         assertEquals("dbunit", p.getLastUpdatedBy());
-        assertEquals(new Long(1), p.getVersion());
+        assertEquals(Long.valueOf(1), p.getVersion());
         assertEquals(Gender.MALE, p.getSex());
         assertNotNull(p.getSsn());
         assertEquals("123456", p.getSsn().getNumber());
@@ -362,13 +362,13 @@ public class TestEmbeddedMapping extends TestDatabase {
 
         assertEquals(2, list.size());
         Person p = list.get(0);
-        assertEquals(new Long(2), p.getId());
+        assertEquals(Long.valueOf(2), p.getId());
         assertEquals("1953-05-16", p.getBirthDate().toString());
         assertEquals(null, p.getCreatedDate());
         assertEquals(null, p.getCreatedBy());
         assertEquals("2006-12-08 00:00:00", sdf.format(p.getLastUpdated()));
         assertEquals("dbunit", p.getLastUpdatedBy());
-        assertEquals(new Long(1), p.getVersion());
+        assertEquals(Long.valueOf(1), p.getVersion());
         assertEquals(Gender.MALE, p.getSex());
         assertNotNull(p.getSsn());
         assertEquals("123456", p.getSsn().getNumber());
@@ -396,7 +396,7 @@ public class TestEmbeddedMapping extends TestDatabase {
 
         assertEquals(1, list.size());
         Person p = list.get(0);
-        assertEquals(new Long(2), p.getId());
+        assertEquals(Long.valueOf(2), p.getId());
     }
 
     @Test
@@ -421,7 +421,7 @@ public class TestEmbeddedMapping extends TestDatabase {
 
         assertEquals(2, list.size());
         Person p = list.get(0);
-        assertEquals(new Long(2), p.getId());
+        assertEquals(Long.valueOf(2), p.getId());
         assertEquals("Pierce", p.getName().getFirst());
         assertEquals("Brosnan", p.getName().getLast());
     }
@@ -449,7 +449,7 @@ public class TestEmbeddedMapping extends TestDatabase {
 
         assertEquals(2, list.size());
         Person p = list.get(0);
-        assertEquals(new Long(2), p.getId());
+        assertEquals(Long.valueOf(2), p.getId());
         assertEquals("Pierce", p.getName().getFirst());
         assertEquals("BROSNAN", p.getName().getLast());
 
@@ -464,7 +464,7 @@ public class TestEmbeddedMapping extends TestDatabase {
 
         assertEquals(2, list.size());
         p = list.get(0);
-        assertEquals(new Long(2), p.getId());
+        assertEquals(Long.valueOf(2), p.getId());
         if (p.getName() != null) {
             assertEquals("", p.getName().getFirst());
             assertEquals("", p.getName().getLast());
@@ -490,13 +490,13 @@ public class TestEmbeddedMapping extends TestDatabase {
 
         assertEquals(2, list.size());
         Person p = list.get(0);
-        assertEquals(new Long(2), p.getId());
+        assertEquals(Long.valueOf(2), p.getId());
         assertEquals("1953-05-16", p.getBirthDate().toString());
         assertEquals(null, p.getCreatedDate());
         assertEquals(null, p.getCreatedBy());
         assertEquals("2006-12-08", p.getLastUpdated().toString());
         assertEquals("dbunit", p.getLastUpdatedBy());
-        assertEquals(new Long(1), p.getVersion());
+        assertEquals(Long.valueOf(1), p.getVersion());
         assertEquals(Gender.MALE, p.getSex());
         assertNotNull(p.getSsn());
         assertEquals("123456", p.getSsn().getNumber());
